--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,14 +21,9 @@
     </properties>
 
     <dependencies>
-        <!-- meecrowave -->
         <dependency>
-            <groupId>org.apache.meecrowave</groupId>
-            <artifactId>meecrowave-specs-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.meecrowave</groupId>
-            <artifactId>meecrowave-core</artifactId>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
         </dependency>
 
         <!-- naolo -->
