--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
@@ -34,10 +34,10 @@
         <meecrowave.version>1.2.9</meecrowave.version>
 
         <spotbugs-annotations.version>3.1.12</spotbugs-annotations.version>
-        <junit.version>5.5.2</junit.version>
-        <assertj.version>3.13.2</assertj.version>
-        <mockito.version>3.1.0</mockito.version>
-        <jqwik.version>1.2.0</jqwik.version>
+        <junit.version>5.6.1</junit.version>
+        <assertj.version>3.15.0</assertj.version>
+        <mockito.version>3.3.0</mockito.version>
+        <jqwik.version>1.2.6</jqwik.version>
         <log4j.version>2.12.1</log4j.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <geronimo-jcdi_2.0_spec.version>1.1</geronimo-jcdi_2.0_spec.version>
@@ -88,12 +88,12 @@
                 <version>${project.version}</version>
             </dependency>
 
-            <!-- Java 9+ compatibility -->
-            <dependency>
-                <groupId>javax.xml.bind</groupId>
-                <artifactId>jaxb-api</artifactId>
-                <version>${jaxb-api.version}</version>
-            </dependency>
+<!--            &lt;!&ndash; Java 9+ compatibility &ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>javax.xml.bind</groupId>-->
+<!--                <artifactId>jaxb-api</artifactId>-->
+<!--                <version>${jaxb-api.version}</version>-->
+<!--            </dependency>-->
 
             <!-- lombok -->
             <dependency>
@@ -102,61 +102,61 @@
                 <version>${lombok.version}</version>
             </dependency>
 
-            <!-- logging -->
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-web</artifactId>
-                <version>${log4j.version}</version>
-            </dependency>
+<!--            &lt;!&ndash; logging &ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.logging.log4j</groupId>-->
+<!--                <artifactId>log4j-web</artifactId>-->
+<!--                <version>${log4j.version}</version>-->
+<!--            </dependency>-->
 
-            <!-- javax.enterprise.context -->
-            <dependency>
-                <groupId>org.apache.geronimo.specs</groupId>
-                <artifactId>geronimo-atinject_1.0_spec</artifactId>
-                <version>${geronimo-atinject_1.0_spec.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.geronimo.specs</groupId>
-                <artifactId>geronimo-jcdi_2.0_spec</artifactId>
-                <version>${geronimo-jcdi_2.0_spec.version}</version>
-            </dependency>
+<!--            &lt;!&ndash; javax.enterprise.context &ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.geronimo.specs</groupId>-->
+<!--                <artifactId>geronimo-atinject_1.0_spec</artifactId>-->
+<!--                <version>${geronimo-atinject_1.0_spec.version}</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.geronimo.specs</groupId>-->
+<!--                <artifactId>geronimo-jcdi_2.0_spec</artifactId>-->
+<!--                <version>${geronimo-jcdi_2.0_spec.version}</version>-->
+<!--            </dependency>-->
 
-            <!-- Meecrowave -->
-            <dependency>
-                <groupId>org.apache.meecrowave</groupId>
-                <artifactId>meecrowave-specs-api</artifactId>
-                <version>${meecrowave.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.meecrowave</groupId>
-                <artifactId>meecrowave-core</artifactId>
-                <version>${meecrowave.version}</version>
-            </dependency>
+<!--            &lt;!&ndash; Meecrowave &ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.meecrowave</groupId>-->
+<!--                <artifactId>meecrowave-specs-api</artifactId>-->
+<!--                <version>${meecrowave.version}</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.meecrowave</groupId>-->
+<!--                <artifactId>meecrowave-core</artifactId>-->
+<!--                <version>${meecrowave.version}</version>-->
+<!--            </dependency>-->
 
-            <!-- DeltaSpike -->
-            <dependency>
-                <groupId>org.apache.deltaspike.distribution</groupId>
-                <artifactId>distributions-bom</artifactId>
-                <version>${deltaspike.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
+<!--            &lt;!&ndash; DeltaSpike &ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.deltaspike.distribution</groupId>-->
+<!--                <artifactId>distributions-bom</artifactId>-->
+<!--                <version>${deltaspike.version}</version>-->
+<!--                <type>pom</type>-->
+<!--                <scope>import</scope>-->
+<!--            </dependency>-->
 
-            <!-- JPA -->
-            <dependency>
-                <groupId>javax.persistence</groupId>
-                <artifactId>javax.persistence-api</artifactId>
-                <version>${javax.persistence.version}</version>
-            </dependency>
+<!--            &lt;!&ndash; JPA &ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>javax.persistence</groupId>-->
+<!--                <artifactId>javax.persistence-api</artifactId>-->
+<!--                <version>${javax.persistence.version}</version>-->
+<!--            </dependency>-->
 
-            <!-- Hibernate -->
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-core</artifactId>
-                <version>${hibernate.version}</version>
-            </dependency>
+<!--            &lt;!&ndash; Hibernate &ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>org.hibernate</groupId>-->
+<!--                <artifactId>hibernate-core</artifactId>-->
+<!--                <version>${hibernate.version}</version>-->
+<!--            </dependency>-->
 
-            <!-- H2 Database -->
+            <!-- H2 Database - for testing only -->
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
