--- a/storage-spi/pom.xml
+++ b/storage-spi/pom.xml
@@ -30,12 +30,7 @@
         <!-- naolo -->
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
-            <artifactId>naolo-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>net.kemitix.naolo</groupId>
-            <artifactId>gateway-data-common</artifactId>
+            <artifactId>naolo-entities</artifactId>
         </dependency>
 
         <!-- lombok -->
