--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -43,6 +43,7 @@
         <geronimo-jcdi_2.0_spec.version>1.1</geronimo-jcdi_2.0_spec.version>
         <geronimo-atinject_1.0_spec.version>1.1</geronimo-atinject_1.0_spec.version>
         <jakartaee-api.version>8.0.0</jakartaee-api.version>
+        <jersey.version>2.30.1</jersey.version>
     </properties>
 
     <dependencyManagement>
@@ -193,7 +194,11 @@
                 <artifactId>jqwik</artifactId>
                 <version>${jqwik.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.glassfish.jersey.core</groupId>
+                <artifactId>jersey-common</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
