--- a/api/pom.xml
+++ b/api/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>jakarta.jakartaee-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
         <!-- naolo -->
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
