--- a/runner-quarkus/pom.xml
+++ b/runner-quarkus/pom.xml
@@ -37,14 +37,36 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
+    <!-- naolo -->
     <dependency>
       <groupId>net.kemitix.naolo</groupId>
       <artifactId>naolo-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>net.kemitix.naolo</groupId>
+      <artifactId>naolo-h2-storage-plugin</artifactId>
+    </dependency>
+
+    <!-- quarkus -->
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-orm</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-h2</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jsonb</artifactId>
+    </dependency>
+
+    <!-- testing -->
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
@@ -55,18 +77,6 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>io.quarkus</groupId>-->
-<!--      <artifactId>quarkus-hibernate-orm</artifactId>-->
-<!--    </dependency>-->
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-jsonb</artifactId>
-    </dependency>
-<!--    <dependency>-->
-<!--      <groupId>io.quarkus</groupId>-->
-<!--      <artifactId>quarkus-jdbc-h2</artifactId>-->
-<!--    </dependency>-->
   </dependencies>
   <build>
     <plugins>
