Add UseCase: AddVet (#157)
* Add lombok to core module

* Add and extract existing Entity<->JPA mappers for Veterinarian

* api: extracted VeterinarianArbitraryProvider

* core: lower required instruction coverage as we are using @Builder

We don’t need or want to have to write tests for the code generated by Lombok.

* runner: add /swagger-ui endpoint

* entities: enable jsonb deserialisation

* Add UseCase: AddVet

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -18,6 +18,8 @@
     <properties>
         <pitest.skip>true</pitest.skip>
         <digraph-dependency.basePackage>net.kemitix.naolo</digraph-dependency.basePackage>
+        <jacoco-class-instruction-covered-ratio>0</jacoco-class-instruction-covered-ratio>
+        <jacoco-class-line-covered-ratio>0.66</jacoco-class-line-covered-ratio>
     </properties>
 
     <dependencies>
@@ -57,6 +59,10 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
