--- a/runner-quarkus/src/main/resources/application.properties
+++ b/runner-quarkus/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 # Configuration file
 # key = value
+quarkus.native.additional-build-args=-H:ReflectionConfigurationFiles=reflection-config.json
 
 # datasource configuration
-quarkus.datasource.db-kind = h2
-# quarkus.datasource.username = hibernate
-# quarkus.datasource.password = hibernate
-quarkus.datasource.jdbc.url = jdbc:h2:mem:naolo
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.username = postgres
+quarkus.datasource.password = naolo
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost/naolo
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
 
-quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.sql=false
