api-tests: add module with test to list and add vets

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -74,6 +74,11 @@
                 <artifactId>naolo-h2-storage-plugin</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>net.kemitix.naolo</groupId>
+                <artifactId>naolo-runner-quarkus</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- lombok -->
             <dependency>
