--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -22,7 +22,11 @@
         <kemitix-maven-tiles.version>2.5.0</kemitix-maven-tiles.version>
         <kemitix-checkstyle.version>5.4.0</kemitix-checkstyle.version>
 
+        <jakartaee-api.version>8.0.0</jakartaee-api.version>
+        <microprofile.version>3.3</microprofile.version>
+
         <lombok.version>1.18.12</lombok.version>
+
         <h2.version>1.4.200</h2.version>
 
         <spotbugs-annotations.version>4.0.1</spotbugs-annotations.version>
@@ -30,7 +34,6 @@
         <assertj.version>3.15.0</assertj.version>
         <mockito.version>3.3.3</mockito.version>
         <jqwik.version>1.2.6</jqwik.version>
-        <jakartaee-api.version>8.0.0</jakartaee-api.version>
         <jersey.version>2.30.1</jersey.version>
     </properties>
 
@@ -41,6 +44,11 @@
                 <groupId>jakarta.platform</groupId>
                 <artifactId>jakarta.jakartaee-api</artifactId>
                 <version>${jakartaee-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.microprofile</groupId>
+                <artifactId>microprofile</artifactId>
+                <version>${microprofile.version}</version>
             </dependency>
 
             <!-- naolo -->
