Mark microprofile as provided for all modules

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -24,6 +24,13 @@
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile</groupId>
+            <artifactId>microprofile</artifactId>
+            <scope>provided</scope>
+            <type>pom</type>
         </dependency>
 
         <!-- lombok -->
