--- a/h2-storage-plugin/pom.xml
+++ b/h2-storage-plugin/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>jakarta.jakartaee-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile</groupId>
+            <artifactId>microprofile</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
