--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -49,6 +49,7 @@
                 <groupId>org.eclipse.microprofile</groupId>
                 <artifactId>microprofile</artifactId>
                 <version>${microprofile.version}</version>
+                <type>pom</type>
             </dependency>
 
             <!-- naolo -->
