--- a/api-tests/pom.xml
+++ b/api-tests/pom.xml
@@ -31,14 +31,9 @@
     </dependencies>
 
     <properties>
-<!--        <java.version>11</java.version>-->
-<!--        <maven.compiler.source>${java.version}</maven.compiler.source>-->
-<!--        <maven.compiler.target>${java.version}</maven.compiler.target>-->
+        <maven.install.skip>true</maven.install.skip>
         <quarkus.version>1.3.0.Final</quarkus.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-
-<!--        &lt;!&ndash; disabled as we have no src/main code to mutate (ignoring KeepMe) &ndash;&gt;-->
-<!--        <pitest.skip>true</pitest.skip>-->
     </properties>
 
     <build>
