--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,12 @@
     <modules>
         <module>parent</module>
         <module>entities</module>
-        <module>core</module>
         <module>storage-spi</module>
+        <module>core</module>
         <module>api</module>
+        <module>storage-plugin</module>
         <module>runner-quarkus</module>
-        <module>h2-storage-plugin</module>
+        <module>api-tests</module>
     </modules>
 
     <groupId>net.kemitix.naolo</groupId>
