--- a/runner-quarkus/pom.xml
+++ b/runner-quarkus/pom.xml
@@ -44,7 +44,7 @@
     </dependency>
     <dependency>
       <groupId>net.kemitix.naolo</groupId>
-      <artifactId>naolo-h2-storage-plugin</artifactId>
+      <artifactId>naolo-storage-plugin</artifactId>
     </dependency>
 
     <!-- quarkus -->
