--- a/storage-plugin/pom.xml
+++ b/storage-plugin/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../parent</relativePath>
     </parent>
 
-    <artifactId>naolo-h2-storage-plugin</artifactId>
+    <artifactId>naolo-storage-plugin</artifactId>
 
     <properties>
         <pitest.skip>true</pitest.skip>
@@ -27,16 +27,12 @@
             <groupId>org.eclipse.microprofile</groupId>
             <artifactId>microprofile</artifactId>
             <scope>provided</scope>
+            <type>pom</type>
         </dependency>
 
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>naolo-storage-spi</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
         </dependency>
     </dependencies>
 
