--- a/api-tests/pom.xml
+++ b/api-tests/pom.xml
@@ -31,6 +31,7 @@
     </dependencies>
 
     <properties>
+        <pitest.skip>true</pitest.skip>
         <maven.install.skip>true</maven.install.skip>
         <quarkus.version>1.3.0.Final</quarkus.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
