Add api-tests module to integration testing (#170)
* api-tests: add module with test to list and add vets

* api: rename package and resource class

* core: ListAllVets use classes for Request/Response

* core: AddVet: replace Value with Getter on Request/Response

Removes unused aspects from Value as we only need the Getters.

* core: ListAllVets remove named constructor only used by tests

* parent: make eclipse microprofile 3.3 available as dependency

* Mark microprofile as provided for all modules

* entities: junit should only be a test dependency

* api-tests: rename artifact

* api-tests: don’t install test artifact

* Update root modules list

* storage-spi: remove unused dependencies

* storage-plugin: rename module - nothing h2 specific about it

* api-test: expect set contents in alphabetical order(?)

* api-tests: add new line at end of config file

* entities: Remove @Builder from Veterinarian

* api-tests: improved Json Object matching

Converted Veterinarian.specialisation to a List to ensure stable ordering.

Closes #160

--- a/storage-plugin/pom.xml
+++ b/storage-plugin/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../parent</relativePath>
     </parent>
 
-    <artifactId>naolo-h2-storage-plugin</artifactId>
+    <artifactId>naolo-storage-plugin</artifactId>
 
     <properties>
         <pitest.skip>true</pitest.skip>
@@ -23,15 +23,16 @@
             <artifactId>jakarta.jakartaee-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile</groupId>
+            <artifactId>microprofile</artifactId>
+            <scope>provided</scope>
+            <type>pom</type>
+        </dependency>
 
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>naolo-storage-spi</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
         </dependency>
     </dependencies>
 
