--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -32,6 +32,8 @@
             <scope>provided</scope>
             <type>pom</type>
         </dependency>
+
+        <!-- lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
