Clean up dependencies (#178)
* Clean up lombok dependencies - ensure optional

* Remove microprofile from dependencyManagement

* entities: remove unused VetSpecialisationProvider

* Remove unused test dependencies from storage-spi module

* core: Remove dependecy upon jqwik

It was only being used to provide a Tuple.

* core: use MockitoExtension

Dependency was there, but wasn’t being used. Could have just been using the original mockito-core.

* api: remove jqwik test dependency

* api,core: use junit-jupiter artifact

* storage-spi: use MockitoExtension

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -27,12 +27,6 @@
             <artifactId>jakarta.jakartaee-api</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.eclipse.microprofile</groupId>
-            <artifactId>microprofile</artifactId>
-            <scope>provided</scope>
-            <type>pom</type>
-        </dependency>
 
         <!-- naolo -->
         <dependency>
@@ -44,10 +38,17 @@
             <artifactId>naolo-storage-spi</artifactId>
         </dependency>
 
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -56,18 +57,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>net.jqwik</groupId>
-            <artifactId>jqwik</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
