api-tests: add quarkus-jdbc-h2 dependency to run tests

--- a/api-tests/pom.xml
+++ b/api-tests/pom.xml
@@ -16,6 +16,10 @@
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>naolo-runner-quarkus</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jdbc-h2</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.quarkus</groupId>
