--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -23,3 +23,14 @@ jobs:
           java-version: ${{ matrix.java }}
       - name: Build with Maven
         run: mvn -B install
+  native-image:
+    runs-on: ubuntu-latest
+    steps:
+      - name: setup-graalvm-ce
+        uses: rinx/setup-graalvm-ce@v0.0.1
+        with:
+          graalvm-version: "20.0.0"
+          java-version: "java11"
+      - name: setup-native-image
+        run: |
+          gu install native-image
