--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -17,11 +17,11 @@ jobs:
         java: [ 11, 13 ]
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK ${{ matrix.java }}
+      - name: setup-jdk-${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
-      - name: Build with Maven
+      - name: build-jar
         run: mvn -B install
   native-image:
     runs-on: ubuntu-latest
@@ -32,5 +32,6 @@ jobs:
           graalvm-version: "20.0.0"
           java-version: "java11"
       - name: setup-native-image
-        run: |
-          gu install native-image
+        run: gu install native-image
+      - name: build-native-image
+        run: mvn -B package -Pnative
