--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -26,6 +26,7 @@ jobs:
   native-image:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: setup-graalvm-ce
         uses: rinx/setup-graalvm-ce@v0.0.1
         with:
