api-tests: run the native-image tests

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -35,4 +35,4 @@ jobs:
       - name: setup-native-image
         run: gu install native-image
       - name: build-native-image
-        run: mvn -B package -Pnative
+        run: mvn -B verify -Pnative
