--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -25,6 +25,20 @@ jobs:
         run: mvn -B install
   native-image:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: naolo
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
     steps:
       - uses: actions/checkout@v2
       - name: setup-graalvm-ce
