github actions: specify db name to create

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -30,6 +30,7 @@ jobs:
       postgres:
         image: postgres
         env:
+          POSTGRES_DB: naolo
           POSTGRES_PASSWORD: naolo
         options: >-
           --health-cmd pg_isready
