--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -17,9 +17,37 @@ jobs:
         java: [ 11, 13 ]
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK ${{ matrix.java }}
+      - name: setup-jdk-${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
-      - name: Build with Maven
+      - name: build-jar
         run: mvn -B install
+  native-image:
+    runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_DB: naolo
+          POSTGRES_PASSWORD: naolo
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: setup-graalvm-ce
+        uses: rinx/setup-graalvm-ce@v0.0.1
+        with:
+          graalvm-version: "20.0.0"
+          java-version: "java11"
+      - name: setup-native-image
+        run: gu install native-image
+      - name: build-native-image
+        run: mvn -B verify -Pnative
