Lombok really is optional in most modules
The only module that has a non-optional dependency upon lombok is the runner and even then that is only when running in dev mode in order to enable on-the-fly recompilation.

--- a/runner-quarkus/pom.xml
+++ b/runner-quarkus/pom.xml
@@ -47,6 +47,12 @@
       <artifactId>naolo-storage-plugin</artifactId>
     </dependency>
 
+    <!-- lombok - to enable dev mode recompilation -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+
     <!-- quarkus -->
     <dependency>
       <groupId>io.quarkus</groupId>
