--- a/war/pom.xml
+++ b/war/pom.xml
@@ -20,6 +20,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>naolo-api</artifactId>
             <exclusions>
