--- a/war/pom.xml
+++ b/war/pom.xml
@@ -16,6 +16,8 @@
 
     <properties>
         <pitest.skip>true</pitest.skip>
+        <microshed.version>0.8</microshed.version>
+        <slf4j.version>1.7.26</slf4j.version>
     </properties>
 
     <dependencies>
@@ -43,6 +45,30 @@
                     <artifactId>lombok</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <!-- testing -->
+        <dependency>
+            <groupId>org.microshed</groupId>
+            <artifactId>microshed-testing-wildfly</artifactId>
+            <version>${microshed.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
