storage-plugin: add dependency on naolo-core
Still needs to be able to access Entities now they aren’t provided via storage-spi.

--- a/storage-plugin/pom.xml
+++ b/storage-plugin/pom.xml
@@ -27,6 +27,10 @@
         <!-- naolo -->
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
+            <artifactId>naolo-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.kemitix.naolo</groupId>
             <artifactId>naolo-storage-spi</artifactId>
         </dependency>
 
