--- a/war/pom.xml
+++ b/war/pom.xml
@@ -16,8 +16,6 @@
 
     <properties>
         <pitest.skip>true</pitest.skip>
-        <microshed.version>0.8</microshed.version>
-        <slf4j.version>1.7.30</slf4j.version>
     </properties>
 
     <dependencies>
@@ -36,28 +34,21 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>net.kemitix.naolo</groupId>
+            <artifactId>naolo-visits</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.projectlombok</groupId>
+                    <artifactId>lombok</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
         <!-- testing -->
         <dependency>
-            <groupId>org.microshed</groupId>
-            <artifactId>microshed-testing-wildfly</artifactId>
-            <version>${microshed.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j.version}</version>
+            <groupId>net.kemitix.naolo</groupId>
+            <artifactId>naolo-testing</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
