visits: fix package name

--- a/visits/pom.xml
+++ b/visits/pom.xml
@@ -27,7 +27,7 @@
         </dependency>
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
-            <artifactId>naolo-owners</artifactId>
+            <artifactId>naolo-vets</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
