--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -36,6 +36,9 @@
         <jersey.version>2.30.1</jersey.version>
         <microshed.version>0.8</microshed.version>
         <slf4j.version>1.7.30</slf4j.version>
+
+        <skip.npm>true</skip.npm>
+        <skip.yarn>true</skip.yarn>
     </properties>
 
     <dependencyManagement>
