webui: add empty module

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -83,6 +83,11 @@
                 <artifactId>naolo-testing</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>net.kemitix.naolo</groupId>
+                <artifactId>naolo-webui</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- lombok -->
             <dependency>
