--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,14 @@
         <module>parent</module>
         <module>testing</module>
         <module>core</module>
-        <module>visits</module>
-        <module>pets</module>
+        <module>vets</module>
         <module>owners</module>
+        <module>pets</module>
+        <module>visits</module>
+        <module>webui</module>
+        <module>war</module>
         <module>runner-quarkus</module>
         <module>api-tests</module>
-        <module>war</module>
-        <module>vets</module>
     </modules>
 
     <groupId>net.kemitix.naolo</groupId>
