--- a/war/pom.xml
+++ b/war/pom.xml
@@ -26,13 +26,7 @@
         </dependency>
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
-            <artifactId>naolo-visits</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.projectlombok</groupId>
-                    <artifactId>lombok</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>naolo-webui</artifactId>
         </dependency>
 
         <!-- testing -->
