make typescript a dev dependency

--- a/webui/src/main/web/package.json
+++ b/webui/src/main/web/package.json
@@ -13,8 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "tachyons": "^4.11.1",
-    "typescript": "~3.7.2"
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^3.8.3"
   }
 }
