runner: Enable CORS

--- a/runner-quarkus/src/main/resources/application.properties
+++ b/runner-quarkus/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 # Configuration file
 # key = value
-
+quarkus.http.cors=true
 # datasource configuration
-quarkus.datasource.db-kind = postgresql
-quarkus.datasource.username = postgres
-quarkus.datasource.password = naolo
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost/
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=postgres
+quarkus.datasource.password=naolo
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost/
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
-
 quarkus.hibernate-orm.log.sql=false
