runner: correctly serve JAX-RS under /api and / for static resources

--- a/runner-quarkus/src/main/resources/application.properties
+++ b/runner-quarkus/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # key = value
 quarkus.http.cors=true
 quarkus.http.root-path=/naolo
-quarkus.servlet.context-path=/api
+quarkus.resteasy.path=/api
 # datasource configuration
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
